force-app/main/default/objects/PSP_Performances__c/PSP_Performances__c.object-meta.xml
<CustomObject>
    <description>A puppeteers performances can be tracked through here.  Not used by 100% of PSP co-ordinators</description>
    <label>PSP Performance</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>PSP Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSP Performances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>