force-app/main/default/objects/PSP_Performances__c/fields/HoursWorked__c.field-meta.xml
<CustomField>
    <fullName>HoursWorked__c</fullName>
    <label>Hours Worked</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>