force-app/main/default/objects/PSP_Performances__c/fields/Performer__c.field-meta.xml
<CustomField>
    <fullName>Performer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Performer&apos;s must be added to the Camp Quality Staff account as contacts.</errorMessage>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Camp Quality Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PSP Performances</relationshipLabel>
    <relationshipName>PSP_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>