force-app/main/default/objects/PSP_Performances__c/fields/Puppet_Show__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show__c</fullName>
    <label>Puppet Show</label>
    <referenceTo>PuppetShow__c</referenceTo>
    <relationshipLabel>PSP Performances</relationshipLabel>
    <relationshipName>PSP_Performances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>